# bevy

./: Cargo.toml
crates/bevy_asset/src/: asset_server.rs
crates/bevy_input/src/: gamepad.rs
crates/bevy_render/src/mesh/: mesh.rs  vertex.rs
crates/bevy_shaded_sprite/: Cargo.toml
crates/bevy_shaded_sprite/src/: entity.rs  lib.rs  shaded_atlas.rs  shaded_quad.rs
crates/bevy_shaded_sprite/src/render/: mod.rs  shaded_sheet.frag  shaded_sheet.vert
crates/bevy_winit/src/: lib.rs
src/: lib.rs  prelude.rs
