[package]
name = "bevy_shaded_sprite"
version = "0.2.0"
edition = "2018"
authors = ["Scott Abbott <scott.abbott.a@gmail.com"]
description = "Provides sprite functionality with normal map shading."
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT"
keywords = ["bevy"]

[dependencies]
# bevy
bevy_app = { path = "../bevy_app", version = "0.2" }
bevy_asset = { path = "../bevy_asset", version = "0.2" }
bevy_core = { path = "../bevy_core", version = "0.2" }
bevy_ecs = { path = "../bevy_ecs", version = "0.2" }
bevy_math = { path = "../bevy_math", version = "0.2" }
bevy_render = { path = "../bevy_render", version = "0.2" }
bevy_transform = { path = "../bevy_transform", version = "0.2" }
bevy_type_registry = { path = "../bevy_type_registry", version = "0.2" }
bevy_utils = { path = "../bevy_utils", version = "0.2" }

# other
rectangle-pack = "0.4"
thiserror = "1.0"